--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
 
         const yesButton = document.getElementById("yesButton");
         //increase size per call by 40%
-        yesButton.style.width = yesButton.offsetWidth * 1.4 + "px";
-        yesButton.style.height = yesButton.offsetHeight * 1.4 + "px";
+        yesButton.style.width = yesButton.offsetWidth * 1.3 + "px";
+        yesButton.style.height = yesButton.offsetHeight * 1.3 + "px";
         yesButton.style.fontSize = yesButton.offsetHeight * 0.6 + "px";
       }
     </script>
@@ -135,21 +135,21 @@
       "
     />
     <p class="mb-4" id="text" />
-    <div style="display: flex; flex-direction: row; width: 400; justify-content:
-    space-between; flex-wrap: wrap;"">
+    <div style="display: flex; flex-direction: column; justify-content:
+    space-between;"">
     <button
       id="yesButton"
       onclick="onClickJa()"
-      style="width: 200px; height: 50px"
-      class="bg-green-500 hover:bg-green-400 text-white font-bold py-2 px-4 border-b-4 border-green-700 hover:border-green-500 rounded mr-2"
+      style="width: 150px; height: 50px"
+      class="bg-green-500 hover:bg-green-400 text-white font-bold py-2 px-4 border-b-4 border-green-700 hover:border-green-500 rounded mb-2"
     >
       Ja 🚀
     </button>
     <button
       id="noButton"
       onclick="onClickNein()"
-      style="width: 200px; height: 50px"
-      class="bg-red-500 hover:bg-red-400 text-white font-bold py-2 px-4 border-b-4 border-red-700 hover:border-red-500 rounded ml-2"
+      style="width: 150px; height: 50px"
+      class="center bg-red-500 hover:bg-red-400 text-white font-bold py-2 px-4 border-b-4 border-red-700 hover:border-red-500 rounded mt-2"
     >
       Nein 😢
     </button>
